# desk-pet

./: .gitignore  CLAUDE.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts
src/: App.vue  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/assets/: Untitled-1
src/components/: PetCanvas.vue
src/composables/: usePetState.ts  useSettings.ts
src/pixi/: index.ts
src/pixi/pet/: Pet.ts  frames.ts  frames_pet1.ts  frames_pet2.ts  frames_pet3.ts  frames_pet4.ts  frames_pet5.ts
src/styles/: main.css
