[package]
name = "desk-pet"
version = "0.1.0"
description = "A desktop pet for macOS"
authors = ["Cai"]
edition = "2021"

[lib]
name = "desk_pet_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-store = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
